# space-game

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
space_game/: global_objects.py  main.py  settings.py
space_game/canvas/: controls.py  coordinates.py  frame.py  info_window.py
space_game/game/: chronology.py  game_over.py  globals.py  main.py  scenario.py  score.py  settings.py
space_game/garbage/: animate.py  animation.py  explosion.py  generator.py  get_frames.py
space_game/obstacles/: obstacles.py
space_game/spaceship/: animate.py  animation.py  fire.py  fire_shot.py  get_frames.py  physics.py
space_game/stars/: animation.py  blink.py  generator.py
space_game/utilities/: async_tools.py  read_file.py
space_game/window/: coordinates.py  frame.py
