[tool.poetry]
name = "space-game"
version = "0.1.0"
description = ""
authors = ["Alena Konovalova <konovalova.alena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-game = "space_game.game.main:main"
